--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
     color: white;
-    font-size: 1rem;
-    background-color: #1b1b85;
+    font-size: 1.5rem;
+    background-color: #19083b;
 }
